syntax = "proto3";

option java_package = "com.e.myapplication";
option java_multiple_files = true;
option java_outer_classname = "UserInfo";

message AccountInfo{
  string mem_userid = 1;
  string Authorization = 2;
  string mem_icon = 3;
  string mem_id = 4;
  string mem_nick = 5;
  string refreshToken =6;
}